# htmxflask

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  scheduled.yml  test.yml
ACTIVESEARCH/: Pipfile  README.md  myapp.py  myapp_test.py  pyproject.toml
ACTIVESEARCH/activesearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ACTIVESEARCH/scripts/: clean_invisible_chars.py  invisible_chars_commands.md
ACTIVESEARCH/static/css/: style.css
ACTIVESEARCH/templates/: index.html
BULKUPDATE/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
BULKUPDATE/static/css/: style.css
BULKUPDATE/templates/: index.html
CLICKEDIT/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
CLICKEDIT/static/css/: style.css
CLICKEDIT/templates/: index.html
CLICKLOAD/: README.md  myapp.py  myapp_test.py  pyproject.toml
CLICKLOAD/static/css/: style.css
CLICKLOAD/templates/: index.html
DELETEROW/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
DELETEROW/static/css/: style.css
DELETEROW/templates/: index.html
DIALOGS/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
DIALOGS/static/css/: style.css
DIALOGS/templates/: index.html
DIALOGSBOOTSTRAP/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
DIALOGSBOOTSTRAP/static/css/: style.css
DIALOGSBOOTSTRAP/templates/: index.html  modal.html
DIALOGSBROWSER/: DESIGN.md  README.md  myapp_test.py  pyproject.toml
DIALOGSBROWSER/static/css/: style.css
DIALOGSBROWSER/templates/: index.html
DIALOGSCUSTOM/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
DIALOGSCUSTOM/static/css/: style.css
DIALOGSCUSTOM/templates/: index.html  modal.html
DIALOGSUIKIT/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
DIALOGSUIKIT/static/css/: style.css
DIALOGSUIKIT/templates/: index.html  modal.html
EDITROW/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
EDITROW/static/css/: style.css
EDITROW/static/js/: editrow.js
EDITROW/templates/: index.html
FILEUPLOAD/: BestPractices.md  DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
FILEUPLOAD/static/css/: style.css
FILEUPLOAD/templates/: index.html
FILEUPLOADPRESERVE/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
FILEUPLOADPRESERVE/static/css/: style.css
FILEUPLOADPRESERVE/templates/: form_with_errors.html  form_with_errors_no_preserve.html  index.html
INLINVALIDATION/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
INLINVALIDATION/static/css/: style.css
INLINVALIDATION/templates/: index.html  validation_message.html
LAZYLOAD/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
LAZYLOAD/static/css/: style.css
LAZYLOAD/templates/: graph.html  index.html
NUMBERS/templates/: index.html
PLY3/: README.md  myapp.py  myapp_test.py  pyproject.toml
PLY3/ply3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PLY3/static/assets/css/: Contact-Form-Clean.css
PLY3/templates/: index.html
PROGRESSBAR/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
PROGRESSBAR/static/css/: style.css
PROGRESSBAR/templates/: index.html
RESETINPUT/: DESIGN.md  README.md  myapp.py  myapp_test.py  pyproject.toml
RESETINPUT/static/css/: style.css
RESETINPUT/templates/: index.html
VALUESELECT/: Pipfile  README.md  car.csv  getdata.py  myapp.py  myapp_test.py  pyproject.toml
VALUESELECT/static/css/: style.css
VALUESELECT/templates/: index.html
VALUESELECT/valueselect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CHANGELOG.md  DEVGUIDINGLIGHT.md  FEATURES.md.bak  GITHUB_ACTIONS.md  RELEASECHECKLIST.md
scripts/: clean_invisible_chars.py
