[project]
name = "htmx-bulk-update"
version = "0.15.0"
description = "HTMX Bulk Update Example - Demonstrates bulk operations with checkboxes and form submissions"
authors = [
    {name = "HTMX Flask Examples", email = "examples@htmxflask.org"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flake8]
max-line-length = 79
ignore = ["W391", "E128"]
exclude = [".venv", "__pycache__", "*.pyc"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["*Test*"]
python_functions = ["test_*"]

