[project]
name = "htmx-click-to-edit"
version = "0.21.1"
description = "HTMX Click-to-Edit Example - Inline editing with hx-get, hx-put, hx-target"
authors = [
    {name = "HTMX Flask Examples", email = "examples@htmxflask.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]