[project]
name = "htmx-click-to-load"
version = "0.16.0"
description = "HTMX Click-to-Load Example - Lazy loading with hx-get, hx-target, hx-swap"
authors = [
    {name = "HTMX Flask Examples", email = "examples@htmxflask.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]