[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htmx-delete-row"
version = "0.1.0"
description = "HTMX Delete Row Example - Demonstrates row deletion with confirmation and fade-out animation"
authors = [{name = "HTMX Flask Examples", email = "examples@htmx.org"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
