[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dialogsbrowser"
version = "0.20.0"
description = "HTMX Dialogs Example - Native browser dialogs with hx-prompt and hx-confirm"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
