[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dialogscustom"
version = "0.22.0"
description = "HTMX Custom Modal Dialogs Example"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-flask>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

