[project]
name = "htmx-edit-row"
version = "0.17.0"
description = "HTMX Edit Row Example - Editable table rows with hx-get, hx-put, hx-target"
authors = [
    {name = "HTMX Flask Examples", email = "examples@htmxflask.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
