[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htmx-file-upload"
version = "0.21.1"
description = "HTMX File Upload Example - Demonstrates drag-and-drop file uploads with progress tracking"
authors = [{name = "HTMX Flask Examples", email = "examples@htmx.org"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
