[project]
name = "htmx-progress-bar"
version = "0.17.0"
description = "HTMX Progress Bar Example - Flask Demo"
authors = [
    {name = "HTMX Flask Examples", email = "examples@htmxflask.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]