[project]
name = "resetinput"
version = "0.20.0"
description = "HTMX Reset User Input Example - Demonstrates automatic form reset after successful requests"
authors = [
    {name = "HTMX Flask Examples", email = "examples@htmxflask.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-flask>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
