[project]
name = "valueselect"
version = "$NEW_VERSION"
description = "HTMX Cascading Dropdowns Example"
requires-python = ">=3.8"
dependencies = [
    "flask"
]

[project.optional-dependencies]
dev = [
    "rope",
    "flake8"
]
data-retrieval = [
    "beautifulsoup4",
    "requests"
] 

[tool.setuptools]
packages = [] 