[project]
name = "valueselect"
version = "0.16.0"
description = "HTMX Cascading Dropdowns Example"
requires-python = ">=3.8"
dependencies = [
    "flask"
]

[project.optional-dependencies]
dev = [
    "rope",
    "flake8"
]
data-retrieval = [
    "beautifulsoup4",
    "requests"
]

[tool.setuptools]
packages = []